<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="alerts">Alerts</string>
    <string name="profile">Profile</string>

    <string name="login_welcome">Welcome</string>
    <string name="sign_in_with_google">Sign in with Google</string>
...
    <string name="hour_abbrev">h</string>
    <string name="day_abbrev">d</string>
    <string name="week_abbrev">w</string>
    <string name="month_abbrev">mo</string>
    <string name="year_abbrev">y</string>

    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="system_default">System default</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>
    <string name="spanish">Spanish</string>
    <string name="apply">Apply</string>
...
